polish: IDE recommendations + Sonar findings - complexity extractions, parameterized rejection tests (#251)
IDE-recommended wording/naming polish (comments, quoted model keys,
'record' -> 'restoredRecord' renames, Utility.sleep in tests) plus
remediation of the SonarQube findings flagged in the IDE:

- TaskExecutor.executeTask cognitive complexity 18 -> well under 15:
  the flow:// and function dispatch branches extracted as launchSubFlow
  and sendTaskEvent (pure code movement).
- KafkaFlowConsumer.deliver 16 -> under 15: the nested ternary in the
  ExecutionException catch extracted as rootCause.
- CompileFlows.validateTtlParameter: the duration parse + positivity
  check extracted as getValidTtlSeconds (IDE extract-method hint).
- KafkaFlowAdapterConfigTest: the family of 7 identical-shape routing/
  serializer rejection tests folded into ONE parameterized test with
  named cases (S5976) - junit-jupiter-params added to the module via
  the existing junit-bom, mirroring platform-core.
- SimpleRandomPartitionerTest: dropped the always-constant 'partitions'
  helper parameter.

All behavior-preserving: event-script 185/185, minimalist-kafka 163/163
(the folded tests run as 7 named parameterized cases - same execution
count), redis-state 10/10.

Co-authored-by: Claude Code <noreply@anthropic.com>